# aol-courses-calendar

./: app.py  calendar-template.html  calendar.html  make_calendar.py  pyproject.toml
.github/workflows/: static.yml
static/: calendar.css  calendar.js
templates/: add-event-form.html  calendar.html  page.html
