[project]
name = "calendar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aa",
    "flask>=3.1.2",
    "jinja2>=3.1.6",
    "pymongo>=4.15.4",
    "python-dotenv>=1.2.1",
    "wtforms>=3.2.1",
]

[dependency-groups]
dev = [
    "ipython>=9.6.0",
]

[tool.uv.sources]
aa = { path = "../automation", editable = true }
